--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,26 @@
   		<artifactId>jcommander</artifactId>
   		<version>1.30</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.json</groupId>
+  		<artifactId>json</artifactId>
+  		<version>20140107</version>
+  	</dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.2</version>
+          <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
