--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,21 @@
   		<artifactId>json</artifactId>
   		<version>20140107</version>
   	</dependency>
+  	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongo-java-driver</artifactId>
+		<version>2.12.4</version>
+	</dependency>
+	<dependency>
+	<groupId>com.google.http-client</groupId>
+		<artifactId>google-http-client</artifactId>
+		<version>1.19.0</version>
+	</dependency>
+	<dependency>
+		<groupId>com.google.http-client</groupId>
+		<artifactId>google-http-client-jackson2</artifactId>
+		<version>1.19.0</version>
+	</dependency>
   </dependencies>
 
   <build>
