--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,24 @@
 		<artifactId>google-http-client-jackson2</artifactId>
 		<version>1.19.0</version>
 	</dependency>
+	    <!-- Core GTFS Library -->
+    <dependency>
+        <groupId>org.onebusaway</groupId>
+        <artifactId>onebusaway-gtfs</artifactId>
+        <version>1.3.3</version>
+    </dependency>
+    <!-- Optional Hibernate GTFS Database Persistence -->
+    <dependency>
+        <groupId>org.onebusaway</groupId>
+        <artifactId>onebusaway-gtfs-hibernate</artifactId>
+        <version>1.3.3</version>
+    </dependency>
+    <!-- Optional GTFS Transformation Library -->
+    <dependency>
+        <groupId>org.onebusaway</groupId>
+        <artifactId>onebusaway-gtfs-transformer</artifactId>
+        <version>1.3.3</version>
+    </dependency>
   </dependencies>
 
   <build>
