--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
         <artifactId>onebusaway-gtfs-transformer</artifactId>
         <version>1.3.3</version>
     </dependency>
+    <dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.10</version>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-simple</artifactId>
+		<version>1.7.7</version>
+	</dependency>
   </dependencies>
 
   <build>
