--- a/pom.xml
+++ b/pom.xml
@@ -1,78 +1,95 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.aalto.emn</groupId>
-  <artifactId>snippets</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <description>Project for analyzing bus schedule data</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.beust</groupId>
-  		<artifactId>jcommander</artifactId>
-  		<version>1.30</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.json</groupId>
-  		<artifactId>json</artifactId>
-  		<version>20140107</version>
-  	</dependency>
-  	<dependency>
-		<groupId>org.mongodb</groupId>
-		<artifactId>mongo-java-driver</artifactId>
-		<version>2.12.4</version>
-	</dependency>
-	<dependency>
-	<groupId>com.google.http-client</groupId>
-		<artifactId>google-http-client</artifactId>
-		<version>1.19.0</version>
-	</dependency>
-	<dependency>
-		<groupId>com.google.http-client</groupId>
-		<artifactId>google-http-client-jackson2</artifactId>
-		<version>1.19.0</version>
-	</dependency>
-	    <!-- Core GTFS Library -->
-    <dependency>
-        <groupId>org.onebusaway</groupId>
-        <artifactId>onebusaway-gtfs</artifactId>
-        <version>1.3.3</version>
-    </dependency>
-    <!-- Optional Hibernate GTFS Database Persistence -->
-    <dependency>
-        <groupId>org.onebusaway</groupId>
-        <artifactId>onebusaway-gtfs-hibernate</artifactId>
-        <version>1.3.3</version>
-    </dependency>
-    <!-- Optional GTFS Transformation Library -->
-    <dependency>
-        <groupId>org.onebusaway</groupId>
-        <artifactId>onebusaway-gtfs-transformer</artifactId>
-        <version>1.3.3</version>
-    </dependency>
-    <dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>1.7.10</version>
-	</dependency>
-	<dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-simple</artifactId>
-		<version>1.7.7</version>
-	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>edu.aalto.emn</groupId>
+	<artifactId>snippets</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<description>Project for analyzing bus schedule data</description>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+			<version>1.30</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.12.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client</artifactId>
+			<version>1.19.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>1.19.0</version>
+		</dependency>
+		<!-- Core GTFS Library -->
+		<dependency>
+			<groupId>org.onebusaway</groupId>
+			<artifactId>onebusaway-gtfs</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		<!-- Optional Hibernate GTFS Database Persistence -->
+		<dependency>
+			<groupId>org.onebusaway</groupId>
+			<artifactId>onebusaway-gtfs-hibernate</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		<!-- Optional GTFS Transformation Library -->
+		<dependency>
+			<groupId>org.onebusaway</groupId>
+			<artifactId>onebusaway-gtfs-transformer</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+	</dependencies>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
-          <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.2</version>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<!-- Build an executable JAR -->
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<archive>
+							<manifest>
+								<addClasspath>true</addClasspath>
+								<classpathPrefix>lib/</classpathPrefix>
+								<mainClass>edu.aalto.emn.SnippetMain</mainClass>
+							</manifest>
+						</archive>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
